src/test/resources/Parser/SyntaxErrors/UndeclaredVariable.front
class A:
    A a := b;